common.scss: fixed controls vertical alignment.

--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -44,7 +44,13 @@ button
 		& > *
 		{
 			margin: 0 .2em;
+			vertical-align: middle;
 		}
+	}
+
+	& > *
+	{
+		vertical-align: middle;
 	}
 }
 
